# public-backend-Herbstblatt

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml  user-guide.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/routers/: notes.py  points.py  registration.py
apps/backend/app/utils/: auth.py
apps/bot/: Dockerfile  main.py  pyproject.toml
apps/bot/modules/: map.py  notes.py  registration.py  trip.py  users.py  welcome.py
apps/bot/strings/ru/: main.ftl
apps/bot/utils/: widgets.py
apps/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
apps/frontend/public/: index.html
apps/frontend/src/: App.jsx  NavItem.jsx  NewRoutePoint.jsx  Notes.jsx  Root.jsx  Tickets.jsx  TripRoute.jsx  WebAppWrapper.jsx  index.css  index.js
db/: __init__.py  models.py
db/migrations/travel_agent/: 0_20240320004538_init.py  1_20240320210011_update.py  2_20240322173306_update.py  3_20240324222053_update.py  4_20240324224531_update.py  5_20240325023426_update.py  6_20240325070041_update.py  7_20240325072132_update.py
